# network-manager-openssh

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  README  TODO  autogen.sh  configure.ac  nm-openssh-service.conf  nm-openssh-service.name.in  nm-openssh.desktop.in  nm-sshtun-service.conf  nm-sshtun-service.name.in  nm-sshtun.desktop.in  tunctl-pointopoint.patch
auth-dialog/: Makefile.am  main.c  nm-sshtun-auth-dialog
common-gnome/: Makefile.am  keyring-helpers.c
po/: POTFILES.in  ar.po  as.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mk.po  mr.po  nb.po  nl.po  pa.po  pl.po  ps.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  (+8 more)
properties/: Makefile.am  nm-openssh-dialog.glade  nm-openssh.c  nm-openssh.h  nm-sshtun-dialog.glade  nm-sshtun.c
src/: Makefile.am  nm-openssh-service.c  nm-openssh-service.h  nm-sshtun-service.c  nm-sshtun-service.h  sshtun.c  sshtun.h
